🎨 [adding bulma and begin front]

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,62 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <nav class="navbar is-info is-spaced has-shadow" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+      <a class="navbar-item" href="https://bulma.io">
+        <img src="https://bulma.io/images/bulma-logo-white.png" alt="Bulma: Free, open source, and modern CSS framework based on Flexbox" width="112" height="28">
+      </a>
+  
+      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="mainMenu">
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+      </a>
+    </div>
+    <div id="navbarBasicExample" class="navbar-menu">
+      <div class="navbar-start">
+        <a class="navbar-item" routerLink="test">
+          Liste des centres
+        </a>
+  
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link">
+            Nom d'utilisateur
+          </a>
+  
+          <div class="navbar-dropdown">
+            <a class="navbar-item">
+              Mon centre
+            </a>
+            <a class="navbar-item">
+              Mon planning
+            </a>
+            <hr class="navbar-divider">
+            <a class="navbar-item">
+              Paramètres
+            </a>
+          </div>
+        </div>
+      </div>
+  
+      <div class="navbar-end">
+        <div class="navbar-item">
+          <div class="buttons">
+            <a class="button is-secondary">
+              Créer mon compte
+            </a>
+            <a class="button is-dark">
+              Connexion
+            </a>
+          </div>
+        </div>
+      </div>
+  </nav>
 </head>
 <body>
-  <app-root></app-root>
+  <div class="container is-fluid">
+    <app-root></app-root>
+  </div>
 </body>
 </html>
