--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     </div>
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
-        <a class="navbar-item" routerLink="test">
+        <a class="navbar-item" routerLink="/centers">
           Liste des centres
         </a>
   
