--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-  <nav class="navbar is-info is-spaced has-shadow" role="navigation" aria-label="main navigation">
+  <nav class="navbar is-dark is-spaced has-shadow" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
-      <a class="navbar-item" href="https://bulma.io">
+      <a class="navbar-item" routerLink="/">
         <img src="https://bulma.io/images/bulma-logo-white.png" alt="Bulma: Free, open source, and modern CSS framework based on Flexbox" width="112" height="28">
       </a>
   
@@ -19,7 +19,7 @@
         <span aria-hidden="true"></span>
       </a>
     </div>
-    <div id="navbarBasicExample" class="navbar-menu">
+    <div id="mainMenu" class="navbar-menu">
       <div class="navbar-start">
         <a class="navbar-item" routerLink="/centers">
           Liste des centres
@@ -48,10 +48,10 @@
       <div class="navbar-end">
         <div class="navbar-item">
           <div class="buttons">
-            <a class="button is-secondary">
+            <a class="button is-link">
               Créer mon compte
             </a>
-            <a class="button is-dark">
+            <a class="button is-link is-light">
               Connexion
             </a>
           </div>
