--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,10 @@
         <a class="navbar-item" routerLink="/centers">
           Liste des centres
         </a>
+
+        <a class="navbar-item" routerLink="/patients">
+          Liste des patients
+        </a>
   
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link">
