--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,21 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="fr" class="has-navbar-fixed-top">
+
 <head>
   <meta charset="utf-8">
-  <title>VaccinationApp</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Polydoctor</title>
+
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="author" content="Samuel DITTE-DESTRÉE, Theo RUSINOWITCH, Lucie GARNIER" />
+  <meta name="color-scheme" content="dark" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="https://unpkg.com/bootstrap@4.6.0/dist/css/bootstrap.min.css" />
 </head>
+
 <body>
-  <div class="container is-fluid">
-    <app-root></app-root>
-    <router-outlet></router-outlet>
-  </div>
+  <app-root></app-root>
+  <router-outlet></router-outlet>
 </body>
+
 </html>
